# airflow-provider-ovhcloud

./: README.md  pyproject.toml
ovhcloud/: __init__.py
ovhcloud/example_dags/: sample.py
ovhcloud/hooks/: api.py  object_storage.py  sample.py
ovhcloud/operators/: ai_training.py  object_storage.py  sample.py
ovhcloud/sensors/: sample.py
tests/hooks/: test_sample_hook.py
tests/operators/: test_sample_operator.py
tests/sensors/: test_sample_sensor.py
