[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-ovhcloud"
authors = [
    { name = "Antoine Rollet", email = "antoine-rollet@live.fr" }

]
license = { text = "Apache License 2.0" }
description = "OVHcloud Apache Airflow provider integration."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.8",
    "boto3"
]

[project.urls]
Source = "https://github.com/AntoineRoll/airflow-provider-ovhcloud/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "ovhcloud.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "ovhcloud.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
